# FallenLondon-ConversionCalculator

./: CMakeLists.txt  Conversion.h  FileIO.cpp  FileIO.h  Info.ui  InfoDialog.cpp  InfoDialog.h  ItemCategory.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  Utils.cpp  Utils.h  categories.txt  conversions.txt  items.txt  main.cpp
